# Manga-Manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  alembic.ini  alembic.v2.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  db.py  domain.py  kavita.py  main.py  models.py  scheduler.py  services.py  settings.py
docs/: catalog-repair.md  codebase-architecture-and-optimization-audit.md  combined-implementation-plan.md  concurrency-tuning.md  database-and-runtime-improvement-plan.md  local-staging.md  minimal-data-reset-plan.md  pi-deployment-and-rollback.md  postgresql-backup-restore.md  validation-history.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
manga_manager/: __init__.py  cli.py  settings.py
scripts/: browser-smoke-server.py  final-validation.sh  kavita-cover-check.py  kavita-e2e-setup.py  kavita-local.sh  list_mangafire_updates.py  reset-local-data.sh  seed-test-data.py  stage-local.sh  stress-download-memory.py  test-environment.sh  verify-scale-api.py
tests/: test_adapters.py  test_catalog_recovery.py  test_cover_evidence.py  test_database_audit.py  test_db_and_health.py  test_diagnostics.py  test_domain.py  test_download_plans.py  test_job_retention.py  test_kavita.py  test_legacy_repair.py  test_library_repair.py  test_match_rescore.py  test_match_training.py  test_matching_score.py  test_postgres_job_queue.py  test_provider_duplicates.py  test_services.py  (+19 more)
(+125 files in other folders)
