[project]
name = "manga-manager"
version = "0.1.0"
description = "Private manga discovery, tracking, download, and Kavita import service."
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "alembic>=1.14.0",
    "pillow>=10.4.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
